data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_743.wast
;; 4. **Test Description**: Place a correct type operand on the stack but have fewer than required for a valid branch.    - **Constraint Checked**: Confirms that the `checkTargetArgs` correctly identifies missing operands.    - **Incorrect Condition Evaluation**: Misinterpretation may lead to branch execution without sufficient operands.

(assert_invalid
  (module (func $insufficient-operand-branch (result i32)
    (block (result i32) (i32.const 1) (br 0))
  ))
  "type mismatch"
)